--- a/index.html
+++ b/index.html
@@ -2,30 +2,43 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8" />
-  <title>WFS (SECLIMAS) via Proxy – Leaflet</title>
+  <title>SECLIMAS WFS via Proxy (AWS Lambda) – Leaflet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" rel="stylesheet"/>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
   <style>
     html, body, #map { height: 100%; margin: 0; }
     .legend {
       background: white; padding: 8px 10px; border-radius: 8px;
       box-shadow: 0 2px 10px rgb(0 0 0 / 0.15);
-      max-height: 300px; overflow: auto; font: 14px/1.3 system-ui, sans-serif;
+      max-height: 340px; overflow: auto; font: 14px/1.35 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      width: 280px;
     }
     .legend h4 { margin: 0 0 8px 0; font-size: 14px; }
     .layer-btn {
       display: block; width: 100%; text-align: left; margin: 4px 0; padding: 6px 8px;
       border: 1px solid #ddd; border-radius: 6px; background: #f8f9fa; cursor: pointer;
+      white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
     }
     .layer-btn:hover { background: #eef3ff; border-color: #c7d7ff; }
+    .layer-btn.active { background: #e6f4ea; border-color: #b7e1cd; }
   </style>
 </head>
 <body>
 <div id="map"></div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script
+  src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+  crossorigin=""
+></script>
 <script>
-  const API_BASE = 'https://SEU_API_GATEWAY/wfs'; // <— troque aqui
+  // >>>>>>> Troque SOMENTE se você mudar o stage/rota no API Gateway
+  const API_BASE = 'https://qbx25v15ug.execute-api.sa-east-1.amazonaws.com/0';
 
   const map = L.map('map').setView([-22.90, -47.06], 12);
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -34,7 +47,7 @@
 
   const activeLayers = new Map(); // typeName -> Leaflet layer
 
-  // Controle tipo "legenda" que também funciona como menu de camadas
+  // Controle tipo "legenda" (também menu de camadas)
   const legend = L.control({ position: 'topright' });
   legend.onAdd = function () {
     const div = L.DomUtil.create('div', 'legend');
@@ -42,13 +55,11 @@
     return div;
   };
   legend.addTo(map);
-
-  // Evita scroll/bubble no container da legenda
   const legendEl = document.querySelector('.legend');
   L.DomEvent.disableClickPropagation(legendEl);
   L.DomEvent.disableScrollPropagation(legendEl);
 
-  // Busca GetCapabilities e monta lista
+  // Busca GetCapabilities e monta lista de FeatureTypes
   async function loadCapabilities() {
     const url = `${API_BASE}?service=WFS&version=1.0.0&request=GetCapabilities`;
     const xmlText = await fetch(url).then(r => r.text());
@@ -64,19 +75,19 @@
 
     const list = document.getElementById('layer-list');
     if (!items.length) {
-      list.textContent = 'Nenhuma camada encontrada.';
+      list.textContent = 'Nenhuma camada encontrada no GetCapabilities.';
       return;
     }
 
     list.innerHTML = items.map(it =>
-      `<button class="layer-btn" data-name="${it.name}">${it.title}</button>`
+      `<button class="layer-btn" title="${it.name}" data-name="${it.name}">${it.title}</button>`
     ).join('');
 
-    list.addEventListener('click', async (e) => {
+    list.addEventListener('click', (e) => {
       const btn = e.target.closest('.layer-btn');
       if (!btn) return;
       const typeName = btn.dataset.name;
-      await toggleLayer(typeName, btn);
+      toggleLayer(typeName, btn);
     });
   }
 
@@ -84,24 +95,34 @@
     if (activeLayers.has(typeName)) {
       map.removeLayer(activeLayers.get(typeName));
       activeLayers.delete(typeName);
-      btn.style.background = '#f8f9fa';
+      btn.classList.remove('active');
       return;
     }
 
-    btn.textContent = `Carregando: ${typeName}…`;
+    const original = btn.textContent;
+    btn.textContent = `Carregando: ${original}…`;
+    btn.disabled = true;
+
     try {
       const params = new URLSearchParams({
-        service: 'WFS', version: '1.0.0', request: 'GetFeature',
-        typeName, srsName: 'EPSG:4326', maxFeatures: '1000'
+        service: 'WFS',
+        version: '1.0.0',
+        request: 'GetFeature',
+        typeName,
+        srsName: 'EPSG:4326',
+        maxFeatures: '1000'
+        // bbox: 'minx,miny,maxx,maxy' // opcional para performance
       });
-      const geojson = await fetch(`${API_BASE}?${params.toString()}`).then(r => r.json());
+
+      const geojson = await fetch(`${API_BASE}?${params}`).then(r => r.json());
 
       const layer = L.geoJSON(geojson, {
         style: { color: '#1565c0', weight: 2, opacity: 0.9 },
-        pointToLayer: (f, latlng) => L.circleMarker(latlng, { radius: 5, color: '#d81b60', fillOpacity: 0.7 }),
+        pointToLayer: (f, latlng) =>
+          L.circleMarker(latlng, { radius: 5, color: '#d81b60', fillOpacity: 0.7 }),
         onEachFeature: (feature, layer) => {
           const props = feature.properties || {};
-          const html = Object.entries(props).slice(0, 20) // limite razoável
+          const html = Object.entries(props).slice(0, 20)
             .map(([k, v]) => `<div><b>${k}</b>: ${v}</div>`).join('');
           if (html) layer.bindPopup(html);
         }
@@ -109,21 +130,20 @@
 
       activeLayers.set(typeName, layer);
       if (layer.getBounds && layer.getBounds().isValid()) map.fitBounds(layer.getBounds());
-      btn.style.background = '#e6f4ea'; // verde claro = ativo
+      btn.classList.add('active');
     } catch (err) {
       console.error('Erro ao carregar camada', typeName, err);
       alert('Erro ao carregar a camada: ' + typeName);
     } finally {
-      // restaura rótulo (mantendo título legível)
-      const title = btn.textContent.replace(/^Carregando:\s*/, '');
-      btn.textContent = title;
+      btn.textContent = original;
+      btn.disabled = false;
     }
   }
 
   loadCapabilities().catch(err => {
     console.error(err);
     const list = document.getElementById('layer-list');
-    if (list) list.textContent = 'Falha ao carregar GetCapabilities.';
+    if (list) list.textContent = 'Falha ao carregar GetCapabilities (ver console).';
   });
 </script>
 </body>
