--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 ></script>
 <script>
   // >>>>>>> Troque SOMENTE se você mudar o stage/rota no API Gateway
-  const API_BASE = 'https://qbx25v15ug.execute-api.sa-east-1.amazonaws.com/0';
+  const API_BASE = "https://9n9kmd1sg3.execute-api.sa-east-1.amazonaws.com/wfs";
 
   const map = L.map('map').setView([-22.90, -47.06], 12);
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -148,3 +148,4 @@
 </script>
 </body>
 </html>
+
